# filmfestival

./: .env.example  .envrc.example  .gitignore  AGENTS.md  README.md  manage.py  pyproject.toml
.github/workflows/: check.yml  deploy.yml
deploy/: Caddyfile  deploy.sh  filmfestival.service  provision.sh
filmfestival/: asgi.py  settings.py  urls.py  wsgi.py
main/: admin.py  forms.py  models.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_remove_submission_year_produced_submission_consent_and_more.py  0003_tshirtorder.py  0004_alter_tshirtorder_size.py  0005_alter_tshirtorder_color.py  0006_alter_tshirtorder_shipping_address.py  0007_remove_tshirtorder_shipping_address.py  0008_alter_submission_genre.py  0009_remove_submission_duration_alter_submission_genre.py
main/templates/main/: index.html  layout.html  submit.html  submit_success.html  tshirt_cancel.html  tshirt_success.html
